--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -132,6 +132,12 @@ body {
   width: 640;
 }
 
+image{
+  width:480px;
+  z-index: 30000;
+  position: absolute;
+}
+
 #buttons {
   margin-top: 15px;
   display: flex;
