--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -134,6 +134,7 @@
           <div id = "camera-box">
             <h1>Camera</h1>
             <div id = "camera" data-augmented-ui="">
+                <img src = "{% static 'images/AIM2.svg' %}" alt = "mirino">
                 <!-- metto la vista dello streaming video -->
                 <img src="{% url 'camera_stream' %}?filter={{filter}}">
             </div>
