aggiunta filtro mirino

--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -132,10 +132,12 @@ body {
   width: 640;
 }
 
-image{
-  width:480px;
+#aim{
+  width:640px;
+  height: 480px;
   z-index: 30000;
   position: absolute;
+  background: transparent;
 }
 
 #buttons {
