--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -177,25 +177,25 @@
             </div>
             <!-- fecce direzionali -->
             <!-- quando schiacciate inviano segnali ai motori per muoversi -->
-            <div>
-              <div align="left">
+            <div class = "buttonContainer">
+              <div id = "ubleft">
                 <button ontouchstart="run_action('frleft')" onmousedown="run_action('frleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◤</button>
               </div>
-              <div align="center">
+              <div id="ubcenter">
                 <button ontouchstart="run_action('forward')" onmousedown="run_action('forward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">▲</button>
               </div>
-              <div align="right">
+              <div id ="ubright">
                 <button ontouchstart="run_action('frright')" onmousedown="run_action('frright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◥</button>
               </div>
             </div>
-            <div>
-              <div align="left">
+            <div class = "buttonContainer">
+              <div id="lbleft">
                 <button ontouchstart="run_action('bwleft')" onmousedown="run_action('bwleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◣</button>
               </div>
-              <div align="center">
+              <div id="lbcenter">
                 <button ontouchstart="run_action('backward')" onmousedown="run_action('backward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">▼</button>
               </div>
-              <div align="right">
+              <div id="lbright">
                 <button ontouchstart="run_action('bwright')" onmousedown="run_action('bwright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◢</button>
               </div>
             </div>
