--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -178,14 +178,14 @@
             <!-- fecce direzionali -->
             <!-- quando schiacciate inviano segnali ai motori per muoversi -->
             <div class = "buttonContainer">
-              <div id = "ubleft">
-                <button ontouchstart="run_action('frleft')" onmousedown="run_action('frleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">.</button>
+              <div>
+                <button id = "ubleft" ontouchstart="run_action('frleft')" onmousedown="run_action('frleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">.</button>
               </div>
-              <div id="ubcenter">
-                <button ontouchstart="run_action('forward')" onmousedown="run_action('forward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">.</button>
+              <div>
+                <button id="ubcenter" ontouchstart="run_action('forward')" onmousedown="run_action('forward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">.</button>
               </div>
-              <div id ="ubright">
-                <button ontouchstart="run_action('frright')" onmousedown="run_action('frright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">.</button>
+              <div >
+                <button id ="ubright" ontouchstart="run_action('frright')" onmousedown="run_action('frright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">.</button>
               </div>
             </div>
             <div class = "buttonContainer">
