--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -178,25 +178,25 @@
             <!-- fecce direzionali -->
             <!-- quando schiacciate inviano segnali ai motori per muoversi -->
             <div class = "buttonContainer">
-              <div id = "ubleft" data-augmented-ui="">
-                <button ontouchstart="run_action('frleft')" onmousedown="run_action('frleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◤</button>
+              <div id = "uleft" >
+                <button  id = "ubleft" data-augmented-ui="" ontouchstart="run_action('frleft')" onmousedown="run_action('frleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◤</button>
               </div>
-              <div id="ubcenter" data-augmented-ui="">
-                <button ontouchstart="run_action('forward')" onmousedown="run_action('forward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">▲</button>
+              <div id="ucenter" >
+                <button  id="ubcenter" data-augmented-ui="" ontouchstart="run_action('forward')" onmousedown="run_action('forward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">▲</button>
               </div>
-              <div id ="ubright">
-                <button ontouchstart="run_action('frright')" onmousedown="run_action('frright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◥</button>
+              <div id ="uright">
+                <button id ="ubright" data-augmented-ui="" ontouchstart="run_action('frright')" onmousedown="run_action('frright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◥</button>
               </div>
             </div>
-            <div class = "buttonContainer" data-augmented-ui="">
-              <div id="lbleft">
-                <button ontouchstart="run_action('bwleft')" onmousedown="run_action('bwleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◣</button>
+            <div class = "buttonContainer" >
+              <div id="lleft">
+                <button id="lbleft" data-augmented-ui="" ontouchstart="run_action('bwleft')" onmousedown="run_action('bwleft')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◣</button>
               </div>
-              <div id="lbcenter">
-                <button ontouchstart="run_action('backward')" onmousedown="run_action('backward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">▼</button>
+              <div id="lcenter">
+                <button  id="lbcenter" data-augmented-ui="" ontouchstart="run_action('backward')" onmousedown="run_action('backward')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">▼</button>
               </div>
-              <div id="lbright">
-                <button ontouchstart="run_action('bwright')" onmousedown="run_action('bwright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◢</button>
+              <div id="lright">
+                <button id="lbright" data-augmented-ui="" ontouchstart="run_action('bwright')" onmousedown="run_action('bwright')" ontouchend="run_action('stop')" onmouseup="run_action('stop')">◢</button>
               </div>
             </div>
           </div>
