--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -263,6 +263,8 @@ button.cyberpunk:focus::before {
 .buttonContainer {
   display: flex;
   justify-content: space-around;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #ubleft{
@@ -270,10 +272,10 @@ button.cyberpunk:focus::before {
   --aug-border: initial;
   --aug-inlay: initial;
   --aug-border-all: 4px;
-  --aug-inlay-all: 2px;
+  --aug-inlay-all: 1px;
   --aug-border-bg: var(--colors-primary--pink);
   --aug-inlay-bg:  var(--colors-primary--pink);
-  --aug-inlay-opacity: 0.5;
+  --aug-inlay-opacity: 0.6;
   --aug-tl1: 40px;
   color:#543ba3;
   text-align: center;
@@ -288,10 +290,10 @@ button.cyberpunk:focus::before {
   --aug-border: initial;
   --aug-inlay: initial;
   --aug-border-all: 4px;
-  --aug-inlay-all: 2px;
+  --aug-inlay-all: 1px;
   --aug-border-bg: var(--colors-primary--pink);
   --aug-inlay-bg:  var(--colors-primary--pink);
-  --aug-inlay-opacity: 0.5;
+  --aug-inlay-opacity: 0.6;
   --aug-tl1: 20px;
   --aug-tl1: 20px;
   color:#543ba3;
@@ -306,10 +308,10 @@ button.cyberpunk:focus::before {
   --aug-border: initial;
   --aug-inlay: initial;
   --aug-border-all: 4px;
-  --aug-inlay-all: 2px;
+  --aug-inlay-all: 1px;
   --aug-border-bg: var(--colors-primary--pink);
   --aug-inlay-bg:  var(--colors-primary--pink);
-  --aug-inlay-opacity: 0.5;
+  --aug-inlay-opacity: 0.6;
   --aug-tr1: 40px;
   color:#543ba3;
   text-align: center;
@@ -327,5 +329,70 @@ button.cyberpunk:focus::before {
 }
 
 #uright{
+  width:20%;
+}
+
+#lbleft{
+  --aug-clip-bl2: initial;
+  --aug-border: initial;
+  --aug-inlay: initial;
+  --aug-border-all: 4px;
+  --aug-inlay-all: 1px;
+  --aug-border-bg: var(--colors-primary--pink);
+  --aug-inlay-bg:  var(--colors-primary--pink);
+  --aug-inlay-opacity: 0.6;
+  --aug-bl2: 40px;
+  color:#543ba3;
+  text-align: center;
+  font-size: 1.5rem;
+  height: 70px;
+  width: 100%;
+}
+
+#lbcenter{
+  --aug-clip-bl2: initial;
+  --aug-clip-br2: initial;
+  --aug-border: initial;
+  --aug-inlay: initial;
+  --aug-border-all: 4px;
+  --aug-inlay-all: 1px;
+  --aug-border-bg: var(--colors-primary--pink);
+  --aug-inlay-bg:  var(--colors-primary--pink);
+  --aug-inlay-opacity: 0.6;
+  --aug-bl2: 20px;
+  --aug-br2: 20px;
+  color:#543ba3;
+  text-align: center;
+  font-size: 1.5rem;
+  height: 70px;
+  width: 100%;
+}
+
+#lbright{
+  --aug-clip-br2: initial;
+  --aug-border: initial;
+  --aug-inlay: initial;
+  --aug-border-all: 4px;
+  --aug-inlay-all: 1px;
+  --aug-border-bg: var(--colors-primary--pink);
+  --aug-inlay-bg:  var(--colors-primary--pink);
+  --aug-inlay-opacity: 0.6;
+  --aug-br2: 40px;
+  color:#543ba3;
+  text-align: center;
+  font-size: 1.5rem;
+  height: 70px;
+  width: 100%;
+}
+
+#lleft{
+  width:20%;
+}
+
+#lcenter{
+  width:20%;
+}
+
+#lright{
   width:20%;
 }
