remote camera clibration

--- a/Robot/remote_control/templates/cameraCal.html
+++ b/Robot/remote_control/templates/cameraCal.html
@@ -9,7 +9,7 @@
         <div id="camera-box">
             <div id="camera">
                 <!-- metto la vista dello streaming video -->
-                <img src="{% url 'camera_stream' %}?filter={{filter}}">
+                <img src="{% url 'camera_calibration' %}?">
             </div>
         </div>
         <div id ="button">
