sostituzione lineDetector con cheemsDetector su django

--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -157,13 +157,13 @@
                   location.href = protocol + "//" + host + pathname + "?filter=aruco";
                 };
               </script>
-              <button id="lineDetector" class = "cyberpunk">Line Detector</button>
+              <button id="lineDetector" class = "cyberpunk">Cheems Detector</button>
               <script type="text/javascript">
                 document.getElementById("lineDetector").onclick = function () {
                   var protocol  = window.location.protocol;
                   var host      = window.location.host;
                   var pathname  = window.location.pathname;
-                  location.href = protocol + "//" + host + pathname + "?filter=line_detector";
+                  location.href = protocol + "//" + host + pathname + "?filter=cheems_detector";
                 };
               </script>
             </div>
